--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@ import { motion, AnimatePresence } from "framer-motion";
 import { Button } from "@/components/ui/button";
 
 const WELCOME_IMAGES = [
-  "/images/photo1.jpg",
-  "/images/photo2.jpg",
-  "/images/photo3.jpg",
-  "/images/photo4.jpg",
-  "/images/photo5.jpg",
-  "/images/photo6.jpg",
-  "/images/photo7.jpg",
-  "/images/photo8.jpg",
-  "/images/photo9.jpg",
-  "/images/photo10.jpg",
+  "/images/photo1.JPG",
+  "/images/photo2.JPG",
+  "/images/photo3.JPG",
+  "/images/photo4.JPG",
+  "/images/photo5.JPG",
+  "/images/photo6.JPG",
+  "/images/photo7.JPG",
+  "/images/photo8.PNG",
+  "/images/photo9.PNG",
+  "/images/photo10.JPEG",
 ];
 
 export default function MotherProject() {
@@ -69,7 +69,7 @@ export default function MotherProject() {
             transition={{ duration: 1 }}
           >
             <video
-              src="/videos/mother_project_video.mp4"
+              src="/videos/video.MOV"
               className="w-full h-full object-cover"
               controls
               autoPlay
