--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@ export default function WelcomeSequence() {
   }
 
   // Replace this with your actual Google Drive file ID
-  const googleDriveFileId = "1aBcDxyz123456789";
+  const googleDriveFileId = "1XMPTPj-HHe1pR9oLpVJgakcOFgLqpeHh";
 
   return (
     <div className="w-screen h-screen bg-black flex items-center justify-center">
       <iframe
-        src={`https://drive.google.com/file/d/1XMPTPj-HHe1pR9oLpVJgakcOFgLqpeHh/preview`}
+        src={`https://drive.google.com/file/d/${googleDriveFileId}/preview`}
         className="w-full h-full"
         allow="autoplay"
         allowFullScreen
