--- a/index.html
+++ b/index.html
@@ -48,6 +48,11 @@
       width: 100%;
       height: 100%;
     }
+
+    .error-message {
+      color: white;
+      text-align: center;
+    }
   </style>
 </head>
 <body>
@@ -80,9 +85,23 @@
         heroElement.style.backgroundImage = `url(${WELCOME_IMAGES[step]})`;
         nextButton.innerHTML = step === 0 ? "ENTER" : "CONTINUE";
       } else {
-        heroElement.innerHTML = `
-          <iframe src="https://drive.google.com/file/d/${googleDriveFileId}/preview" allow="autoplay" allowfullscreen title="Mother Project Video"></iframe>
-        `;
+        const iframe = document.createElement('iframe');
+        iframe.src = `https://drive.google.com/file/d/${googleDriveFileId}/preview`;
+        iframe.allow = "autoplay";
+        iframe.allowFullscreen = true;
+        iframe.title = "Mother Project Video";
+
+        // Error handling: If the video fails to load
+        iframe.onerror = () => {
+          heroElement.innerHTML = `
+            <div class="error-message">
+              <p>Sorry, we couldn't load the video.</p>
+            </div>
+          `;
+        };
+
+        heroElement.innerHTML = '';
+        heroElement.appendChild(iframe);
       }
     };
 
@@ -100,25 +119,5 @@
 
 </body>
 </html>
-ex items-center justify-center">
-          {errorLoadingVideo ? (
-            <div className="text-white text-center">
-              <p>Sorry, we couldn't load the video.</p>
-            </div>
-          ) : (
-            <iframe
-              src={`https://drive.google.com/file/d/${googleDriveFileId}/preview`}
-              className="w-full h-full"
-              allow="autoplay"
-              allowFullScreen
-              title="Mother Project Video"
-              onError={() => setErrorLoadingVideo(true)}
-            ></iframe>
-          )}
-        </div>
-      )}
-    </div>
-  );
-}
 
 
