--- a/index.html
+++ b/index.html
@@ -11,34 +11,34 @@
       background-color: black;
       color: white;
       height: 100vh;
-      display: flex;
-      flex-direction: column;
       overflow: hidden;
     }
 
     .hero {
-      flex: 1;
+      height: 100%;
       width: 100%;
+      position: relative;
       display: flex;
       justify-content: center;
       align-items: center;
       text-align: center;
       background-size: cover;
       background-position: center;
+      transition: background-image 1s ease-in-out;
       opacity: 1;
+    }
+
+    .fade {
+      opacity: 0;
       transition: opacity 1s ease-in-out;
     }
 
-    .fade-out {
-      opacity: 0;
-    }
-
     .button-container {
+      position: absolute;
+      bottom: 40px;
       width: 100%;
       display: flex;
       justify-content: center;
-      padding: 20px;
-      background-color: black;
     }
 
     .button {
@@ -59,30 +59,21 @@
     iframe {
       width: 100%;
       height: 100%;
+      border: none;
     }
 
     .error-message {
       color: white;
       text-align: center;
     }
-
-    audio {
-      display: none;
-    }
   </style>
 </head>
 <body>
 
-  <!-- Background Music -->
-  <audio id="bgm" autoplay loop>
-    <source src="https://www.youtube.com/watch?v=U4B445VqYE4" type="audio/mpeg">
-    Your browser does not support the audio element.
-  </audio>
-
-  <div id="hero" class="hero"></div>
-
-  <div class="button-container">
-    <button id="nextButton" class="button">ENTER</button>
+  <div id="hero" class="hero">
+    <div class="button-container">
+      <button id="nextButton" class="button">ENTER</button>
+    </div>
   </div>
 
   <script>
@@ -104,41 +95,47 @@
     const heroElement = document.getElementById('hero');
     const nextButton = document.getElementById('nextButton');
 
-    const fadeDuration = 1000; // in ms
+    // Prepare background music
+    const bgm = new Audio("https://example.com/your-audio.mp3"); // 👈 Replace this!
+    bgm.loop = true;
 
     const updateUI = () => {
-      heroElement.classList.add("fade-out");
+      if (step < WELCOME_IMAGES.length) {
+        // Fade out
+        heroElement.classList.add('fade');
 
-      setTimeout(() => {
-        if (step < WELCOME_IMAGES.length) {
+        setTimeout(() => {
           heroElement.style.backgroundImage = `url(${WELCOME_IMAGES[step]})`;
           nextButton.innerHTML = step === 0 ? "ENTER" : "CONTINUE";
-        } else {
-          const iframe = document.createElement('iframe');
-          iframe.src = `https://drive.google.com/file/d/${googleDriveFileId}/preview`;
-          iframe.allow = "autoplay";
-          iframe.allowFullscreen = true;
-          iframe.title = "Mother Project Video";
+          heroElement.classList.remove('fade');
+        }, 500);
+      } else {
+        const iframe = document.createElement('iframe');
+        iframe.src = `https://drive.google.com/file/d/${googleDriveFileId}/preview`;
+        iframe.allow = "autoplay";
+        iframe.allowFullscreen = true;
+        iframe.title = "Mother Project Video";
 
-          iframe.onerror = () => {
-            heroElement.innerHTML = `
-              <div class="error-message">
-                <p>Sorry, we couldn't load the video.</p>
-              </div>
-            `;
-          };
+        iframe.onerror = () => {
+          heroElement.innerHTML = `
+            <div class="error-message">
+              <p>Sorry, we couldn't load the video.</p>
+            </div>
+          `;
+        };
 
-          heroElement.innerHTML = '';
-          heroElement.appendChild(iframe);
-
-          document.querySelector('.button-container').style.display = 'none';
-        }
-
-        heroElement.classList.remove("fade-out");
-      }, fadeDuration);
+        heroElement.innerHTML = '';
+        heroElement.appendChild(iframe);
+      }
     };
 
     const handleNextStep = () => {
+      if (step === 0) {
+        bgm.play().catch((e) => {
+          console.log("Autoplay blocked or error:", e);
+        });
+      }
+
       if (step < WELCOME_IMAGES.length) {
         step++;
       }
@@ -147,7 +144,7 @@
 
     nextButton.addEventListener('click', handleNextStep);
 
-    updateUI(); // Initialize UI
+    updateUI(); // Initialize
   </script>
 
 </body>
