--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     const nextButton = document.getElementById('nextButton');
 
     // Prepare background music
-    const bgm = new Audio("https://example.com/your-audio.mp3"); // 👈 Replace this!
+    const bgm = new Audio("https://raw.githubusercontent.com/Kotz-Kaotsu/Mother-s-Day/main/audio/bgm.mp3"); // 👈 Replace this!
     bgm.loop = true;
 
     const updateUI = () => {
