--- a/index.html
+++ b/index.html
@@ -25,12 +25,6 @@
       background-size: cover;
       background-position: center;
       transition: background-image 1s ease-in-out;
-      opacity: 1;
-    }
-
-    .fade {
-      opacity: 0;
-      transition: opacity 1s ease-in-out;
     }
 
     .button-container {
@@ -101,14 +95,9 @@
 
     const updateUI = () => {
       if (step < WELCOME_IMAGES.length) {
-        // Fade out
-        heroElement.classList.add('fade');
-
-        setTimeout(() => {
-          heroElement.style.backgroundImage = `url(${WELCOME_IMAGES[step]})`;
-          nextButton.innerHTML = step === 0 ? "ENTER" : "CONTINUE";
-          heroElement.classList.remove('fade');
-        }, 500);
+        // Simply change the background image without fading out
+        heroElement.style.backgroundImage = `url(${WELCOME_IMAGES[step]})`;
+        nextButton.innerHTML = step === 0 ? "ENTER" : "CONTINUE";
       } else {
         const iframe = document.createElement('iframe');
         iframe.src = `https://drive.google.com/file/d/${googleDriveFileId}/preview`;
